# news_podcast

./: .env.example  .gitignore  README.md  bbc_output.md  pyproject.toml  pytest.ini  requirements.txt  run_podcast.py  run_publish.py  run_test.py  scheduler.py  sources.yaml  summarize_podcast.py  test_output.md  tts.py
src/news_podcast/: main.py  podcast_creator.py  wechat_publisher.py
src/news_podcast/api/: llm_client.py  wechat_client.py
src/news_podcast/crawlers/: web_crawler.py
src/news_podcast/models/: news_task.py
src/news_podcast/utils/: config_manager.py  logger.py  news_processor.py
tests/: README.md  conftest.py  test_crawler.py  test_wechat.py  test_wechat_publisher.py
