[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news_podcast"
version = "0.1.0"
description = "News Podcast项目"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
log_cli = true
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an asyncio coroutine",
]

[tool.ruff]
line-length = 88
target-version = "py38" 